adding cards to dashboard page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,80 @@
                     <img src="imgs/avatar.png" alt="">
                 </div>
             </header>
-            <main></main>
+            <main class="mg-18 dashboard">
+                <h1 class="pos-r mg-b8">Dashboard</h1>
+                <div class="d-grid gap-20">
+                    <div class="br-8 bg-white welcome">
+                        <div class="head d-flex-space pd-18 bg-eee">
+                            <div>
+                                <h2 class="mg-b6">Welcome</h2>
+                                <p class="c-grey">Anis</p>
+                            </div>
+                            <img src="imgs/welcome.png" alt="people-shaking-hands">
+                        </div>
+                        <img src="imgs/avatar.png" alt="" class="circle avatar">
+                        <div class="body d-flex pd-20 txt-center justify-around mg-t20 mg-b20">
+                            <div>
+                                <p>Kehila Anis</p>
+                                <span class="c-grey fs-14 mg-t10 d-block">Developer</span>
+                            </div>
+                            <div>
+                                <p>80</p>
+                                <span class="c-grey fs-14 mg-t10 d-block">Projects</span>
+                            </div>
+                            <div>
+                                <p>$8500</p>
+                                <span class="c-grey fs-14 mg-t10 d-block">Earned</span>
+                            </div>
+                        </div>
+                        <a href="/profile.html" class="bg-blue btn c-white fs-14">
+                            Profile
+                        </a>
+                    </div>
+                    <div class="br-8 bg-white pd-18 draft">
+                        <h2 class="mg-b6">Quick Draft</h2>
+                        <p class="c-grey fs-15">Write A Draft For Your Ideas</p>
+                        <form action="#">
+                            <input type="text" name="title" placeholder="Title" class="pd-12 mg-t18 mg-b18 bg-eee">
+                            <textarea name="draft-content" placeholder="Your Thought" class="bg-eee pd-12"></textarea>
+                            <input type="submit" value="Save" class="bg-blue btn c-white fs-14">
+                        </form>
+                    </div>
+                    <div class="br-8 bg-white pd-18 stats">
+                        <h2 class="mg-b6">Yearly Targets</h2>
+                        <p class="c-grey fs-15">Targets Of The Year</p>
+                        <div class="icon d-flex mg-t20">
+                            <i class="fa-solid fa-dollar-sign fa-lg c-blue pd-20"></i>
+                            <div class="bar">
+                                <p class="c-grey fs-14">Money</p>
+                                <p class="fw-b">$20.000</p>
+                                <span class="progress d-block pos-r" data-progress="80">
+                                    <span class="box fs-14 c-white pos-a bg-blue">80%</span>
+                                    <span class="money d-block"></span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="br-8 bg-white pd-18">
+
+                    </div>
+                    <div class="br-8 bg-white pd-18">
+
+                    </div>
+                    <div class="br-8 bg-white pd-18">
+
+                    </div>
+                    <div class="br-8 bg-white pd-18">
+
+                    </div>
+                    <div class="br-8 bg-white pd-18">
+
+                    </div>
+                    <div class="br-8 bg-white pd-18">
+
+                    </div>
+                </div>
+            </main>
         </div>
     </div>
 </body>
