finishing dashboard page

--- a/index.html
+++ b/index.html
@@ -335,17 +335,98 @@
                     </div>
                     <!-- END Latest Uploads -->
                     <!-- Starts project progress -->
-                    <div class="br-8 bg-white pd-18 projects-progress">
+                    <div class="br-8 bg-white pd-18 projects-progress pos-r">
                         <h2 class="mg-b8">Last Project Progress</h2>
                         <ul class="pos-r">
-                            <li class="mg-t18">Got the project</li>
-                            <li class="mg-t18">Started The Project</li>
-                            <li class="mg-t18">The Project About To Finish</li>
-                            <li class="mg-t18">Test The Project</li>
-                            <li class="mg-t18">Finish The Project & Get Money</li>
+                            <li class="mg-t20 pos-r done">Got the project</li>
+                            <li class="mg-t20 pos-r done">Started The Project</li>
+                            <li class="mg-t20 pos-r done">The Project About To Finish</li>
+                            <li class="mg-t20 pos-r progress">Test The Project</li>
+                            <li class="mg-t20 pos-r undone">Finish The Project & Get Money</li>
                         </ul>
+                        <img src="imgs/project.png" alt="science-rocket" class="pos-a del-small">
                     </div>
                     <!-- END project progress -->
+                    <!-- Starts Reminders  -->
+                    <div class="br-8 bg-white pd-18 reminders">
+                        <h2 class="mg-b8">Reminders</h2>
+                        <ul class="pos-r">
+                            <li class="mg-t20 pos-r fs-14 pos-r">
+                                <span class="d-block fw-b mg-b6">Check My Tasks List</span>
+                                <span class="d-block c-grey">28/11/2022 - 12:00am</span>
+                            </li>
+                            <li class="mg-t20 pos-r fs-14 pos-r">
+                                <span class="d-block fw-b mg-b6">Check My Projects</span>
+                                <span class="d-block c-grey">26/11/2022 - 11:00am</span>
+                            </li>
+                            <li class="mg-t20 pos-r fs-14 pos-r">
+                                <span class="d-block fw-b mg-b6">Call All My Clients</span>
+                                <span class="d-block c-grey">01/12/2022 - 12:00pm</span>
+                            </li>
+                            <li class="mg-t20 pos-r fs-14 pos-r">
+                                <span class="d-block fw-b mg-b6">Finish The Development Workshop</span>
+                                <span class="d-block c-grey">28/11/2022 - 12:00am</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- END Reminders -->
+                    <!-- Start Latest Post -->
+                    <div class="br-8 bg-white pd-18 l-post">
+                        <h2 class="mg-b18">Latest Post</h2>
+                        <div class="d-flex-center info">
+                            <img src="imgs/avatar.png" alt="persone" class="mg-r18">
+                            <div>
+                                <span class="fw-b d-block">Kehila Anis</span>
+                                <span class="c-grey d-block">About 3 Hours Ago</span>
+                            </div>
+                        </div>
+                        <div class="content pd-t20 pd-b20">
+                            You Can Fool All Of The People Some Of The Time, And Some Of The People All Of The Time, But You Can't Fool All Of The People All Of The Time.
+                        </div>
+                        <div class="d-flex-center justify-space c-grey pd-t20">
+                            <div>
+                                <i class="fa-regular fa-heart"></i>
+                                <span>1.8K</span>
+                            </div>
+                            <div>
+                                <i class="fa-regular fa-comments"></i>
+                                <span>500</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- END Latest Post -->
+                    <!-- Start social -->
+                    <div class="br-8 bg-white pd-18 social">
+                        <h2 class="mg-b18">Social Media Stats</h2>
+                        <div class="d-flex-center twitter">
+                            <i class="fa-brands fa-twitter fa-2x c-white pd-8"></i>
+                            <div class="d-flex-center justify-space info">
+                                <span>90K Followers</span>
+                                <span class="btn-shape">Follow</span>
+                            </div>
+                        </div>
+                        <div class="d-flex-center facebook">
+                            <i class="fa-brands fa-facebook-f fa-2x c-white pd-8"></i>
+                            <div class="d-flex-center justify-space info">
+                                <span>2M Like</span>
+                                <span class="btn-shape">Like</span>
+                            </div>
+                        </div>
+                        <div class="d-flex-center youtube">
+                            <i class="fa-brands fa-youtube fa-2x c-white pd-8"></i>
+                            <div class="d-flex-center justify-space info">
+                                <span>1M Subs</span>
+                                <span class="btn-shape">Subscriber</span>
+                            </div>
+                        </div>
+                        <div class="d-flex-center linkedin">
+                            <i class="fa-brands fa-linkedin fa-2x c-white pd-8"></i>
+                            <div class="d-flex-center justify-space info">
+                                <span>70K Followers</span>
+                                <span class="btn-shape">Follow</span>
+                            </div>
+                        </div>
+                    <!-- End social -->
                 </div>
             </main>
         </div>
