last touches in the dashboard page

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <main class="mg-14 dashboard">
                 <h1 class="pos-r mg-b8">Dashboard</h1>
                 <!-- Grid boxes -->
-                <div class="d-grid gap-20">
+                <div class="d-grid gap-20 w-full">
                     <!-- Welcome box -->
                     <div class="br-8 bg-white welcome txt-small-center">
                         <div class="head d-flex-space pd-18 bg-eee">
@@ -426,10 +426,100 @@
                                 <span class="btn-shape">Follow</span>
                             </div>
                         </div>
+                    </div>
                     <!-- End social -->
+                    <!-- Starts projects table -->
+                    <div class="br-8 bg-white pd-18 projects-table">
+                        <h2 class="mg-b18">Projects</h2>
+                        <div class="table">
+                            <table class="fs-15">
+                                <thead>
+                                    <th>Name</th>
+                                    <th>Finish Date</th>
+                                    <th>Client</th>
+                                    <th>Price</th>
+                                    <th>Team</th>
+                                    <th>Status</th>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Ministry Wikipedia</td>
+                                        <td>10 May 2022</td>
+                                        <td>Ministry</td>
+                                        <td>$5300</td>
+                                        <td>
+                                            <img src="imgs/team-01.png" alt="team-member">
+                                            <img src="imgs/team-02.png" alt="team-member">
+                                            <img src="imgs/team-03.png" alt="team-member">
+                                            <img src="imgs/team-04.png" alt="team-member">
+                                        </td>
+                                        <td><span class="btn-shape c-white bg-orange">Pending</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Elzero Shop</td>
+                                        <td>12 Oct 2021</td>
+                                        <td>Elzero Company</td>
+                                        <td>$1500</td>
+                                        <td>
+                                            <img src="imgs/team-01.png" alt="team-member" />
+                                            <img src="imgs/team-02.png" alt="team-member" />
+                                            <img src="imgs/team-05.png" alt="team-member" />
+                                        </td>
+                                        <td><span class="btn-shape bg-blue c-white">In Progress</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Bouba App</td>
+                                        <td>05 Sep 2021</td>
+                                        <td>Bouba</td>
+                                        <td>$800</td>
+                                        <td>
+                                            <img src="imgs/team-02.png" alt="team-member" />
+                                            <img src="imgs/team-03.png" alt="team-member" />
+                                        </td>
+                                        <td><span class="btn-shape bg-green c-white">Completed</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mahmoud Website</td>
+                                        <td>22 May 2021</td>
+                                        <td>Mahmoud</td>
+                                        <td>$600</td>
+                                        <td>
+                                            <img src="imgs/team-01.png" alt="team-member" />
+                                            <img src="imgs/team-02.png" alt="team-member" />
+                                        </td>
+                                        <td><span class="btn-shape bg-green c-white">Completed</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Sayed Website</td>
+                                        <td>24 May 2021</td>
+                                        <td>Sayed</td>
+                                        <td>$300</td>
+                                        <td>
+                                            <img src="imgs/team-01.png" alt="team-member" />
+                                            <img src="imgs/team-03.png" alt="team-member" />
+                                        </td>
+                                        <td><span class="btn-shape bg-red c-white">Rejected</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Arena Application</td>
+                                        <td>01 Mar 2021</td>
+                                        <td>Arena Company</td>
+                                        <td>$2600</td>
+                                        <td>
+                                            <img src="imgs/team-01.png" alt="team-member" />
+                                            <img src="imgs/team-02.png" alt="team-member" />
+                                            <img src="imgs/team-03.png" alt="team-member" />
+                                            <img src="imgs/team-04.png" alt="team-member" />
+                                        </td>
+                                        <td><span class="btn-shape bg-green c-white">Completed</span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <!-- End projects table -->
                 </div>
-            </main>
-        </div>
+        </main>
     </div>
 </body>
 </html>
