--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <div class="side-bar bg-white pd-20">
             <h3 class="pos-r mg-auto">Anis</h3>
             <ul>
-                <li><a href="#" class="active"><i class="fa-regular fa-chart-bar fa-fw"></i><span>Dashboard</span></a></li>
-                <li><a href="#"><i class="fa-solid fa-gear fa-fw"></i><span>Settings</span></a></li>
-                <li><a href="#"><i class="fa-regular fa-user fa-fw"></i><span>Profile</span></a></li>
-                <li><a href="#"><i class="fa-solid fa-diagram-project fa-fw"></i><span>Projects</span></a></li>
-                <li><a href="#"><i class="fa-solid fa-graduation-cap fa-fw"></i><span>Courses</span></a></li>
-                <li><a href="#"><i class="fa-regular fa-circle-user fa-fw"></i><span>Freinds</span></a></li>
-                <li><a href="#"><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a></li>
-                <li><a href="#"><i class="fa-regular fa-credit-card fa-fw"></i><span>Plans</span></a></li>
+                <li><a href="index.html" class="active"><i class="fa-regular fa-chart-bar fa-fw"></i><span>Dashboard</span></a></li>
+                <li><a href="settings.html"><i class="fa-solid fa-gear fa-fw"></i><span>Settings</span></a></li>
+                <li><a href="profile.html"><i class="fa-regular fa-user fa-fw"></i><span>Profile</span></a></li>
+                <li><a href="projects.html"><i class="fa-solid fa-diagram-project fa-fw"></i><span>Projects</span></a></li>
+                <li><a href="courses.html"><i class="fa-solid fa-graduation-cap fa-fw"></i><span>Courses</span></a></li>
+                <li><a href="freinds.html"><i class="fa-regular fa-circle-user fa-fw"></i><span>Freinds</span></a></li>
+                <li><a href="files.html"><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a></li>
+                <li><a href="plans.html"><i class="fa-regular fa-credit-card fa-fw"></i><span>Plans</span></a></li>
             </ul>
         </div>
         <div class="content">
