creating settings page

--- a/settings.html
+++ b/settings.html
@@ -53,7 +53,7 @@
                                 <p>Website Control</p>
                                 <p class="fs-15 c-grey mg-t6">Open/Close Website And Type The Reason</p>
                             </div>
-                            <div class="switch-btn"></div>
+                            <div class="switch-btn active"></div>
                         </div>
                         <textarea placeholder="Close Message Content" class="mg-t20 br-6 pd-l18 pd-t10"></textarea>
                     </div>
@@ -79,7 +79,27 @@
                     <div class="br-8 bg-white pd-18 security">
                         <h2>Security Info</h2>
                         <p class="fs-15 c-grey mg-t12 mg-b20">Security Information About Your Account</p>
-
+                        <div class="d-flex-space align pd-b18">
+                            <div>
+                                <p>Password</p>
+                                <p class="fs-14 mg-t6 c-grey">Last Change On 25/10/2021</p>
+                            </div>
+                            <a href="#" class="btn-shape c-white bg-blue">Change</a>
+                        </div>
+                        <div class="d-flex-space align pd-b18 pd-t18">
+                            <div>
+                                <p>Two-Factor Authentication</p>
+                                <p class="fs-14 mg-t6 c-grey">Enable/Disable The Feature</p>
+                            </div>
+                            <div class="switch-btn active"></div>
+                        </div>
+                        <div class="d-flex-space align pd-b18 pd-t18">
+                            <div>
+                                <p>Devices</p>
+                                <p class="fs-14 mg-t6 c-grey">Check The Login Devices List</p>
+                            </div>
+                            <a href="#" class="btn-shape bg-eee">Devices</a>
+                        </div>
                     </div>
                     <!-- Social info -->
                     <div class="br-8 bg-white pd-18 social">
