finished settings page + working on profile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="main d-flex">
-        <div class="side-bar bg-white pd-20">
+        <div class="side-bar bg-white pd-20" id="side-bar">
             <h3 class="pos-r mg-auto">Anis</h3>
             <ul>
                 <li><a href="index.html" class="active"><i class="fa-regular fa-chart-bar fa-fw"></i><span>Dashboard</span></a></li>
@@ -27,7 +27,7 @@
                 <li><a href="courses.html"><i class="fa-solid fa-graduation-cap fa-fw"></i><span>Courses</span></a></li>
                 <li><a href="freinds.html"><i class="fa-regular fa-circle-user fa-fw"></i><span>Freinds</span></a></li>
                 <li><a href="files.html"><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a></li>
-                <li><a href="plans.html"><i class="fa-regular fa-credit-card fa-fw"></i><span>Plans</span></a></li>
+                <li id="close-side-bar"><a href="plans.html"><i class="fa-regular fa-credit-card fa-fw"></i><span>Plans</span></a></li>
             </ul>
         </div>
         <div class="content">
@@ -521,5 +521,7 @@
                 </div>
         </main>
     </div>
+    <script src="script.js"></script>
+
 </body>
 </html>
