--- a/settings.html
+++ b/settings.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="main d-flex">
-        <div class="side-bar bg-white pd-20">
+        <div class="side-bar bg-white pd-20" id="side-bar">
             <h3 class="pos-r mg-auto">Anis</h3>
             <ul>
                 <li><a href="index.html"><i class="fa-regular fa-chart-bar fa-fw"></i><span>Dashboard</span></a></li>
@@ -27,7 +27,7 @@
                 <li><a href="courses.html"><i class="fa-solid fa-graduation-cap fa-fw"></i><span>Courses</span></a></li>
                 <li><a href="freinds.html"><i class="fa-regular fa-circle-user fa-fw"></i><span>Freinds</span></a></li>
                 <li><a href="files.html"><i class="fa-regular fa-file fa-fw"></i><span>Files</span></a></li>
-                <li><a href="plans.html"><i class="fa-regular fa-credit-card fa-fw"></i><span>Plans</span></a></li>
+                <li id="close-side-bar"><a href="plans.html"><i class="fa-regular fa-credit-card fa-fw"></i><span>Plans</span></a></li>
             </ul>
         </div>
         <div class="content">
@@ -103,12 +103,77 @@
                     </div>
                     <!-- Social info -->
                     <div class="br-8 bg-white pd-18 social">
+                        <h2>Social Info</h2>
+                        <p class="fs-15 c-grey mg-t12 mg-b12">Social Media Information</p>
+                        <div class="d-flex-center rev mg-t14">
+                            <input type="text" placeholder="Twitter Username">
+                            <i class="fa-brands fa-twitter c-grey"></i>
+                        </div>
+                        <div class="d-flex-center rev mg-t14">
+                            <input type="text" placeholder="Facebook Username">
+                            <i class="fa-brands fa-facebook-f c-grey"></i>
+                        </div>
+                        <div class="d-flex-center rev mg-t14">
+                            <input type="text" placeholder="Linkedin Username">
+                            <i class="fa-brands fa-linkedin c-grey"></i>
+                        </div>
+                        <div class="d-flex-center rev mg-t14">
+                            <input type="text" placeholder="Youtube Username">
+                            <i class="fa-brands fa-youtube c-grey"></i>
+                        </div>
                     </div>
                     <!-- Widgets Control -->
                     <div class="br-8 bg-white pd-18 c-widgets">
+                        <h2>Widgets Control</h2>
+                        <p class="fs-15 c-grey mg-t12 mg-b20">Show/Hide Widgets</p>
+                        <input type="checkbox" id="draft" checked>
+                        <label for="draft" class="mg-12">Quick Draft</label>
+                        <input type="checkbox" id="y-targets" checked>
+                        <label for="y-targets" class="mg-12">Yearly Targets</label>
+                        <input type="checkbox" id="tickets" checked>
+                        <label for="tickets" class="mg-12">Tickets Statistics</label>
+                        <input type="checkbox" id="news" checked>
+                        <label for="news" class="mg-12">Latest News</label>
+                        <input type="checkbox" id="tasks" >
+                        <label for="tasks" class="mg-12">Latest Tasks</label>
+                        <input type="checkbox" id="top-search" checked>
+                        <label for="top-search" class="mg-12">Top Search Items</label>
                     </div>
                     <!-- Backup -->
                     <div class="br-8 bg-white pd-18 backup">
+                        <h2>Backup Manager</h2>
+                        <p class="fs-15 c-grey mg-t12 mg-b20">Control Backup Time And Location</p>
+                        <div class="radios pd-b12">
+                            <input type="radio" name="time" id="daily" checked>
+                            <label for="daily" class="mg-12">Daily</label>
+                            <input type="radio" name="time" id="weakly">
+                            <label for="weakly" class="mg-12">Weakly</label>
+                            <input type="radio" name="time" id="monthly">
+                            <label for="monthly" class="mg-12">Monthly</label>
+                        </div>
+                        <div class="d-flex-center justify-center gap-20 cards mg-t20">
+                            <div>
+                                <input type="radio" name="type" id="megaman">
+                                <label for="megaman" class="d-flex-col">
+                                    <i class="fa-solid fa-server d-block mg-b10"></i>
+                                    <span class="d-block">Megaman</span>
+                                </label>
+                            </div>
+                            <div>
+                                <input type="radio" name="type" id="Zero" checked>
+                                <label for="Zero" class="d-flex-col justify-center">
+                                    <i class="fa-solid fa-server d-block mg-b10"></i>
+                                    <span class="d-block">Zero</span>
+                                </label>
+                            </div>
+                            <div>
+                                <input type="radio" name="type" id="Sigma">
+                                <label for="Sigma" class="d-flex-col justify-center">
+                                    <i class="fa-solid fa-server d-block mg-b10"></i>
+                                    <span class="d-block">Sigma</span>
+                                </label>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </main>
