--- a/profile.html
+++ b/profile.html
@@ -42,10 +42,32 @@
             </header>
             <main class="mg-14 profile">
                 <h1 class="pos-r mg-b20">Profile</h1>
-                <div class="card d-flex bg-white br-8 mg-t20">
-                    <div class="txt-center">
+                <div class="card d-flex bg-white br-8 mg-t22 ">
+                    <div class="d-flex-center col justify-center profile-info mg-b20 mg-t20">
                         <img src="imgs/avatar.png" alt="avatar-guy">
+                        <span class="fw-b fs-18">Anis Kehila</span>
+                        <span class="c-grey">Level 20</span>
+                        <span class="progress-bar pos-r"></span>
+                        <div class="stars">
+                            <i class="fa-solid fa-star c-orange fs-14"></i>
+                            <i class="fa-solid fa-star c-orange fs-14"></i>
+                            <i class="fa-solid fa-star c-orange fs-14"></i>
+                            <i class="fa-solid fa-star c-orange fs-14"></i>
+                            <i class="fa-solid fa-star c-orange fs-14"></i>
+                        </div>
+                        <span class="c-grey fs-14">550 Rating</span>
                     </div>
+                    <ul class="settings">
+                        <li class="pd-14">
+                            <p class="c-grey">General Information</p>
+                            <div class="d-flex-center fs-14 mg-t8">
+                                <p class="c-grey">Full Name: <span class="c-black">Kehila Anis</span></p>
+                                <p class="c-grey">Gender: <span class="c-black">Male</span></p>
+                                <p class="c-grey">Country: <span class="c-black">Algeria</span></p>
+                                <div class="switch-btn active"></div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </main>
         </div>
