--- a/profile.html
+++ b/profile.html
@@ -43,7 +43,7 @@
             <main class="mg-14 profile">
                 <h1 class="pos-r mg-b20">Profile</h1>
                 <div class="card d-flex bg-white br-8 mg-t22 ">
-                    <div class="d-flex-center col justify-center profile-info mg-b20 mg-t20">
+                    <div class="d-flex-center col justify-space profile-info">
                         <img src="imgs/avatar.png" alt="avatar-guy">
                         <span class="fw-b fs-18">Anis Kehila</span>
                         <span class="c-grey">Level 20</span>
@@ -57,17 +57,140 @@
                         </div>
                         <span class="c-grey fs-14">550 Rating</span>
                     </div>
-                    <ul class="settings">
-                        <li class="pd-14">
-                            <p class="c-grey">General Information</p>
-                            <div class="d-flex-center fs-14 mg-t8">
+                    <ul class="settings pos-r">
+                        <li class="pd-t12 pd-b12">
+                            <p class="c-grey pd-l18">General Information</p>
+                            <div class="d-flex-center fs-14 pd-l18">
                                 <p class="c-grey">Full Name: <span class="c-black">Kehila Anis</span></p>
                                 <p class="c-grey">Gender: <span class="c-black">Male</span></p>
                                 <p class="c-grey">Country: <span class="c-black">Algeria</span></p>
                                 <div class="switch-btn active"></div>
                             </div>
                         </li>
+                        <li class="pd-t12 pd-b12">
+                            <p class="c-grey pd-l18">Personal Information</p>
+                            <div class="d-flex-center fs-14 pd-l18">
+                                <p class="c-grey">Email: <span class="c-black">aniskehile22@gmail.com</span></p>
+                                <p class="c-grey">Phone: <span class="c-black">+213781495820</span></p>
+                                <p class="c-grey">Date Of Birth: <span class="c-black">21-08-2002</span></p>
+                                <div class="switch-btn"></div>
+                            </div>
+                        </li>
+                        <li class="pd-t12 pd-b12">
+                            <p class="c-grey pd-l18">Job Information</p>
+                            <div class="d-flex-center fs-14 pd-l18">
+                                <p class="c-grey">Title: <span class="c-black">Web Developer</span></p>
+                                <p class="c-grey">Programming Language: <span class="c-black">javaScript</span></p>
+                                <p class="c-grey">Years Of Experience: <span class="c-black">2</span></p>
+                                <div class="switch-btn active"></div>
+                            </div>
+                        </li>
+                        <li class="pd-t12 pd-b12">
+                            <p class="c-grey pd-l18">Billing Information</p>
+                            <div class="d-flex-center fs-14 pd-l18">
+                                <p class="c-grey">Payment Methode: <span class="c-black">PayPal</span></p>
+                                <p class="c-grey">Email: <span class="c-black">aniskehila@contact.com</span></p>
+                                <p class="c-grey">Subscription: <span class="c-black">Monthly</span></p>
+                                <div class="switch-btn"></div>
+                            </div>
+                        </li>
                     </ul>
+                </div>
+                <div class="d-flex mg-t20 gap-20 respo">
+                    <div class="bg-white br-8 pd-20 skills">
+                        <h2>My Skills</h2>
+                        <p class="c-grey">Complete Skills List</p>
+                        <ul class="mg-t20">
+                            <li class="d-flex pd-t20 pd-b20">
+                                <div class="btn-shape bg-eee mg-r12 fs-14">HTML</div>
+                                <div class="btn-shape bg-eee mg-r12 fs-14">Pugjs</div>
+                                <div class="btn-shape bg-eee mg-r12 fs-14">HAML</div>
+                            </li>
+                            <li class="d-flex pd-t20 pd-b20">
+                                <div class="btn-shape bg-eee mg-r12 fs-14">CSS</div>
+                                <div class="btn-shape bg-eee mg-r12 fs-14">SASS</div>
+                                <div class="btn-shape bg-eee mg-r12 fs-14">Stylus</div>
+                            </li>
+                            <li class="d-flex pd-t20 pd-b20">
+                                <div class="btn-shape bg-eee mg-r12 fs-14">JavaScript</div>
+                                <div class="btn-shape bg-eee mg-r12 fs-14">TypeScript</div>
+                            </li>
+                            <li class="d-flex pd-t20 pd-b20">
+                                <div class="btn-shape bg-eee mg-r12 fs-14">VueJs</div>
+                                <div class="btn-shape bg-eee mg-r12 fs-14">ReactJs</div>
+                            </li>
+                            <li class="d-flex pd-t20 pd-b20">
+                                <div class="btn-shape bg-eee mg-r12 fs-14">Jest</div>
+                                <div class="btn-shape bg-eee mg-r12 fs-14">Jasmine</div>
+                            </li>
+                            <li class="d-flex pd-t20 pd-b20">
+                                <div class="btn-shape bg-eee mg-r12 fs-14">PHP</div>
+                                <div class="btn-shape bg-eee mg-r12 fs-14">Laravel</div>
+                            </li>
+                            <li class="d-flex pd-t20 pd-b20">
+                                <div class="btn-shape bg-eee mg-r12 fs-14">Python</div>
+                                <div class="btn-shape bg-eee mg-r12 fs-14">Django</div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="bg-white br-8 pd-20 activities">
+                        <h2>Latest Activities</h2>
+                        <p class="c-grey">Latest Activities Done By The User</p>
+                        <ul class="mg-t20">
+                            <li class="respo d-flex-space">
+                                <div class="respo d-flex-center">
+                                    <img src="imgs/activity-01.png" alt="shop-icon">
+                                    <div>
+                                        <p class="mg-b10">Store</p>
+                                        <p class="c-grey">Bought The Mastering Python Course</p>
+                                    </div>
+                                </div>
+                                <div class="time">
+                                    <p class="mg-b10">18:10</p>
+                                    <p class="c-grey">Yesterday</p>
+                                </div>
+                            </li>
+                            <li class="respo d-flex-space">
+                                <div class="respo d-flex-center">
+                                    <img src="imgs/activity-02.png" alt="shop-icon">
+                                    <div>
+                                        <p class="mg-b10">Academy</p>
+                                        <p class="c-grey">Got The PHP Certificate</p>
+                                    </div>
+                                </div>
+                                <div class="time">
+                                    <p class="mg-b10">12:10</p>
+                                    <p class="c-grey">Yesterday</p>
+                                </div>
+                            </li>
+                            <li class="respo d-flex-space">
+                                <div class="respo d-flex-center">
+                                    <img src="imgs/activity-03.png" alt="shop-icon">
+                                    <div>
+                                        <p class="mg-b10">Badges</p>
+                                        <p class="c-grey">Unlocked The 10 Skills Badge</p>
+                                    </div>
+                                </div>
+                                <div class="time">
+                                    <p class="mg-b10">17:28</p>
+                                    <p class="c-grey">Yesterday</p>
+                                </div>
+                            </li>
+                            <li class="respo d-flex-space">
+                                <div class="respo d-flex-center">
+                                    <img src="imgs/activity-01.png" alt="shop-icon">
+                                    <div>
+                                        <p class="mg-b10">Store</p>
+                                        <p class="c-grey">Bought The Typescript Course</p>
+                                    </div>
+                                </div>
+                                <div class="time">
+                                    <p class="mg-b10">12:10</p>
+                                    <p class="c-grey">Yesterday</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </main>
         </div>
